# fallout

./: .gitignore  BOM.csv  BOM.xlsx  README.md  README.md.md
Fallout_CAD/: Fallout.3mf  Fallout.f3z
Fallout_CAD/3D_Print/: Cover.stl  Left Body.stl  Left Bottom Cover.stl  Left Top Cover.stl  Screen Cover Left.stl  Screen Cover Right.stl
Fallout_PCB/: Fallout.baka.kicad_pcb  Fallout.kicad_pcb  Fallout.kicad_prl  Fallout.kicad_pro  Fallout.kicad_sch  Fallout_Symbols.bak  Fallout_Symbols.kicad_sym  fp-lib-table
Fallout_PCB/Fallout.pretty/: AMS1117-3.3.kicad_mod  Bat_Connector.kicad_mod  DRV2650L.kicad_mod  ESP32-S3_raw_chip.kicad_mod  ESP32_Module.kicad_mod  MAX17048.kicad_mod  MT3608.kicad_mod  MT6701.kicad_mod  PCF8574T.kicad_mod  TP4056.kicad_mod  Untitled.kicad_mod  Untitled_1.kicad_mod
Fallout_PCB/Gerbers/: Fallout-B_Cu.gbr  Fallout-B_Mask.gbr  Fallout-B_Paste.gbr  Fallout-B_Silkscreen.gbr  Fallout-Edge_Cuts.gbr  Fallout-F_Cu.gbr  Fallout-F_Mask.gbr  Fallout-F_Paste.gbr  Fallout-F_Silkscreen.gbr  Fallout-NPTH.drl  Fallout-PTH.drl  Fallout-job.gbrjob
Fallout_PCB/Left_Wing/: Left_Wing.kicad_pcb  Left_Wing.kicad_prl  Left_Wing.kicad_pro  Left_Wing.kicad_sch  macro.step  ~Left_Wing.kicad_pcb.lck
Fallout_Software/Daemon/: go.mod  go.sum  main.go
Fallout_Software/Firmware/: CMakeLists.txt
Fallout_Software/Firmware/main/: CMakeLists.txt  ble.cpp  ble.hpp  input.cpp  input.hpp  magnetic.cpp  magnetic.hpp  main.cpp  screen.cpp  screen.hpp  voltmeter.cpp  voltmeter.hpp
Fallout_UI/: DWprj.hmi  DisplayConfig.xls  TouchConfig.xls
Fallout_UI/DWIN_SET/: 33.icl  (+4 more)
(+14 files in other folders)
